tailwindcss, online status bug fix,routes changes,login

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./index.css" />
     <!-- Favicon -->
      <link rel="icon" type="image/png" href="favicon.ico" />
-    <title>Get Ur Food</title>
+    <title>Foodie</title>
 </head>
 
 <body>
